# super-waffle

./: .gitignore  Dockerfile  Makefile  README.md
dotfiles/: .p10k.zsh
scripts/: entrypoint.sh
tiago_ws/src/: setup.sh
tiago_ws/src/ddynamic_reconfigure_python/scripts/: class_example.py  example.py
tiago_ws/src/eband_local_planner/: CHANGELOG.rst  CMakeLists.txt
tiago_ws/src/gazebo_ros_pkgs/gazebo_dev/: CHANGELOG.rst
tiago_ws/src/gazebo_ros_pkgs/gazebo_msgs/: CHANGELOG.rst
tiago_ws/src/gazebo_ros_pkgs/gazebo_plugins/: CHANGELOG.rst  setup.py
tiago_ws/src/gazebo_ros_pkgs/gazebo_ros/: CHANGELOG.rst  setup.py
tiago_ws/src/gazebo_ros_pkgs/gazebo_ros_control/: CHANGELOG.rst  CMakeLists.txt
tiago_ws/src/gazebo_ros_pkgs/gazebo_ros_pkgs/: CHANGELOG.rst
tiago_ws/src/omni_base_navigation/omni_base_2dnav/: CHANGELOG.rst  CMakeLists.txt
tiago_ws/src/omni_base_navigation/omni_base_2dnav/config/rviz/: advanced_navigation.rviz  navigation.rviz
tiago_ws/src/omni_base_navigation/omni_base_2dnav/launch/: localization.launch  mapping.launch  move_base.launch  state_machine.launch
tiago_ws/src/omni_base_navigation/omni_base_laser_sensors/: CHANGELOG.rst  CMakeLists.txt
tiago_ws/src/omni_base_navigation/omni_base_maps/: CHANGELOG.rst  CMakeLists.txt
tiago_ws/src/pal_navigation_sm/: setup.py
tiago_ws/src/pal_python/: CHANGELOG.rst  setup.py
tiago_ws/src/robotics_project/: setup.py
tiago_ws/src/rviz_plugin_covariance/: CHANGELOG.rst  CMakeLists.txt
tiago_ws/src/simple_grasping_action/: setup.py
tiago_ws/src/tf_lookup/: setup.py
(+253 files in other folders)
